benchmarks/c/pregen/re2c/submatch_11__alt1_4.cc
/* Generated by re2c */
#include "re2c/base.h"

namespace re2c_submatch_11__alt1_4 {





#define YYMAXFILL 2


struct input_t {
    FILE* file;
    char *buf;
    char *lim;
    char *cur;
    char *mar;
    char *tok;
    char *yyt1;
char *yyt2;
char *yyt3;
char *yyt4;
char *yyt5;
char *yyt6;
char *yyt7;
char *yyt8;

    
    taglistpool_t tlp;
    int eof;
};

static inline void free_input(input_t *in) {
    free(in->buf);
    taglistpool_free(&in->tlp);
    if (in->file) fclose(in->file);
}

static inline int fill_buffered_eof(input_t *in) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free > 0);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    if (in->yyt1) in->yyt1 -= free;
if (in->yyt2) in->yyt2 -= free;
if (in->yyt3) in->yyt3 -= free;
if (in->yyt4) in->yyt4 -= free;
if (in->yyt5) in->yyt5 -= free;
if (in->yyt6) in->yyt6 -= free;
if (in->yyt7) in->yyt7 -= free;
if (in->yyt8) in->yyt8 -= free;


    in->lim += fread(in->lim, 1, free, in->file);
    in->lim[0] = 0;

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
    }

    return 0;
}

static inline int fill_buffered_scc(input_t *in, size_t need) {
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    assert(free >= need);

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    if (in->yyt1) in->yyt1 -= free;
if (in->yyt2) in->yyt2 -= free;
if (in->yyt3) in->yyt3 -= free;
if (in->yyt4) in->yyt4 -= free;
if (in->yyt5) in->yyt5 -= free;
if (in->yyt6) in->yyt6 -= free;
if (in->yyt7) in->yyt7 -= free;
if (in->yyt8) in->yyt8 -= free;


    in->lim += fread(in->lim, 1, free, in->file);

    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
        memset(in->lim, 0, YYMAXFILL);
        in->lim += YYMAXFILL;
    }

    return 0;
}

static inline void init_input_simple(input_t *in, const char* fname) {
    FILE* f = fopen(fname, "rb");

    fseek(f, 0, SEEK_END);
    size_t flen = (size_t) ftell(f);
    fseek(f, 0, SEEK_SET);

    in->file = nullptr; // unused
    in->buf = (char*) malloc(flen + 1);
    in->lim = nullptr; // unused
    in->cur = in->mar = in->tok = in->buf;
    in->yyt1 = 0;
in->yyt2 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
in->yyt5 = 0;
in->yyt6 = 0;
in->yyt7 = 0;
in->yyt8 = 0;

    
    taglistpool_init(&in->tlp);
    in->eof = 0; // unused

    fread(in->buf, 1, flen, f);
    in->buf[flen] = 0;

    fclose(f);
}

static inline void init_input_buffered_eof(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + 1);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    in->yyt1 = 0;
in->yyt2 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
in->yyt5 = 0;
in->yyt6 = 0;
in->yyt7 = 0;
in->yyt8 = 0;

    
    taglistpool_init(&in->tlp);
    in->eof = 0;
    fill_buffered_eof(in);
}

static inline void init_input_buffered_scc(input_t *in, const char* fname) {
    in->file = fopen(fname, "rb");
    in->buf = (char*) malloc(SIZE + YYMAXFILL);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    in->yyt1 = 0;
in->yyt2 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
in->yyt5 = 0;
in->yyt6 = 0;
in->yyt7 = 0;
in->yyt8 = 0;

    
    taglistpool_init(&in->tlp);
    in->eof = 0;
}

#define YYCURSOR cur
#define YYMARKER mar
#define YYTOKEN tok
#define TLP_CLEAR() do { \
    in->tlp.next = in->tlp.head; \
     \
} while (0)

int lex_simple(input_t *in) {
    char *cur = in->buf, *mar, *tok;
    (void) tok; // may be unused
    char *yyt1;
char *yyt2;
char *yyt3;
char *yyt4;
char *yyt5;
char *yyt6;
char *yyt7;
char *yyt8;

    
    const char* a1;const char* a2;const char* b1;const char* b2;const char* c1;const char* c2;const char* d1;const char* d2;
    
    long count = 0;
loop:
    tok = cur;
    
{
	char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,  16,  32,  64, 128,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	yych = *YYCURSOR;
	if (yych <= '`') {
		if (yych <= 0x00) goto yy1;
		if (yych == '\n') {
			yyt1 = YYCURSOR;
			yyt2 = YYCURSOR;
			yyt3 = NULL;
			yyt4 = NULL;
			yyt5 = NULL;
			yyt6 = NULL;
			yyt7 = NULL;
			yyt8 = NULL;
			goto yy4;
		}
		goto yy2;
	} else {
		if (yych <= 'b') {
			if (yych <= 'a') {
				yyt1 = YYCURSOR;
				goto yy5;
			}
			yyt6 = YYCURSOR;
			goto yy6;
		} else {
			if (yych <= 'c') {
				yyt7 = YYCURSOR;
				goto yy7;
			}
			if (yych <= 'd') {
				yyt8 = YYCURSOR;
				goto yy8;
			}
			goto yy2;
		}
	}
yy1:
	++YYCURSOR;
	{ return count; }
yy2:
	++YYCURSOR;
yy3:
	{ return -1; }
yy4:
	++YYCURSOR;
	a1 = yyt1;
	a2 = yyt2;
	b1 = yyt6;
	b2 = yyt3;
	c1 = yyt7;
	c2 = yyt4;
	d1 = yyt8;
	d2 = yyt5;
	{
        if (a1)      { OUTC('A'); OUTS(a1, a2); }
        else if (b1) { OUTC('B'); OUTS(b1, b2); }
        else if (c1) { OUTC('C'); OUTS(c1, c2); }
        else if (d1) { OUTC('D'); OUTS(d1, d2); }
        OUTC('\n');
        goto loop;
    }
yy5:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 16) goto yy9;
	if (yych == '\n') {
		yyt2 = YYCURSOR;
		yyt3 = NULL;
		yyt4 = NULL;
		yyt5 = NULL;
		yyt6 = NULL;
		yyt7 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
	goto yy3;
yy6:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 32) goto yy11;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = YYCURSOR;
		yyt4 = NULL;
		yyt5 = NULL;
		yyt7 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
	goto yy3;
yy7:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 64) goto yy12;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = NULL;
		yyt4 = YYCURSOR;
		yyt5 = NULL;
		yyt6 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
	goto yy3;
yy8:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 128) goto yy13;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = NULL;
		yyt4 = NULL;
		yyt5 = YYCURSOR;
		yyt6 = NULL;
		yyt7 = NULL;
		goto yy4;
	}
	goto yy3;
yy9:
	yych = *++YYCURSOR;
	if (yybm[0+yych] & 16) goto yy9;
	if (yych == '\n') {
		yyt2 = YYCURSOR;
		yyt3 = NULL;
		yyt4 = NULL;
		yyt5 = NULL;
		yyt6 = NULL;
		yyt7 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
yy10:
	YYCURSOR = YYMARKER;
	goto yy3;
yy11:
	yych = *++YYCURSOR;
	if (yybm[0+yych] & 32) goto yy11;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = YYCURSOR;
		yyt4 = NULL;
		yyt5 = NULL;
		yyt7 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
	goto yy10;
yy12:
	yych = *++YYCURSOR;
	if (yybm[0+yych] & 64) goto yy12;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = NULL;
		yyt4 = YYCURSOR;
		yyt5 = NULL;
		yyt6 = NULL;
		yyt8 = NULL;
		goto yy4;
	}
	goto yy10;
yy13:
	yych = *++YYCURSOR;
	if (yybm[0+yych] & 128) goto yy13;
	if (yych == '\n') {
		yyt1 = NULL;
		yyt2 = NULL;
		yyt3 = NULL;
		yyt4 = NULL;
		yyt5 = YYCURSOR;
		yyt6 = NULL;
		yyt7 = NULL;
		goto yy4;
	}
	goto yy10;
}

}

#undef YYCURSOR
#undef YYMARKER
#undef YYTOKEN
#undef TLP_CLEAR

#define YYCURSOR in->cur
#define YYMARKER in->mar
#define YYLIMIT in->lim
#define YYTOKEN in->tok
#define TLP_CLEAR() do { \
    in->tlp.next = in->tlp.head; \
     \
} while (0)

int lex_buffered_eof(input_t *in) {
    const char* a1;const char* a2;const char* b1;const char* b2;const char* c1;const char* c2;const char* d1;const char* d2;
    
    long count = 0;
loop:
    in->tok = in->cur;
    
{
	char yych;
yyFillLabel0:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = YYCURSOR;
			in->yyt2 = YYCURSOR;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'a':
			in->yyt1 = YYCURSOR;
			goto yy18;
		case 'b':
			in->yyt6 = YYCURSOR;
			goto yy19;
		case 'c':
			in->yyt7 = YYCURSOR;
			goto yy20;
		case 'd':
			in->yyt8 = YYCURSOR;
			goto yy21;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel0;
				goto yy27;
			}
			goto yy15;
	}
yy15:
	++YYCURSOR;
yy16:
	{ return -1; }
yy17:
	++YYCURSOR;
	a1 = in->yyt1;
	a2 = in->yyt2;
	b1 = in->yyt6;
	b2 = in->yyt3;
	c1 = in->yyt7;
	c2 = in->yyt4;
	d1 = in->yyt8;
	d2 = in->yyt5;
	{
        if (a1)      { OUTC('A'); OUTS(a1, a2); }
        else if (b1) { OUTC('B'); OUTS(b1, b2); }
        else if (c1) { OUTC('C'); OUTS(c1, c2); }
        else if (d1) { OUTC('D'); OUTS(d1, d2); }
        OUTC('\n');
        goto loop;
    }
yy18:
	YYMARKER = ++YYCURSOR;
yyFillLabel1:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt2 = YYCURSOR;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'a': goto yy22;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel1;
			}
			goto yy16;
	}
yy19:
	YYMARKER = ++YYCURSOR;
yyFillLabel2:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = YYCURSOR;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'b': goto yy24;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel2;
			}
			goto yy16;
	}
yy20:
	YYMARKER = ++YYCURSOR;
yyFillLabel3:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = NULL;
			in->yyt4 = YYCURSOR;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'c': goto yy25;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel3;
			}
			goto yy16;
	}
yy21:
	YYMARKER = ++YYCURSOR;
yyFillLabel4:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = YYCURSOR;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			goto yy17;
		case 'd': goto yy26;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel4;
			}
			goto yy16;
	}
yy22:
	++YYCURSOR;
yyFillLabel5:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt2 = YYCURSOR;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'a': goto yy22;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel5;
			}
			goto yy23;
	}
yy23:
	YYCURSOR = YYMARKER;
	goto yy16;
yy24:
	++YYCURSOR;
yyFillLabel6:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = YYCURSOR;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'b': goto yy24;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel6;
			}
			goto yy23;
	}
yy25:
	++YYCURSOR;
yyFillLabel7:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = NULL;
			in->yyt4 = YYCURSOR;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt8 = NULL;
			goto yy17;
		case 'c': goto yy25;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel7;
			}
			goto yy23;
	}
yy26:
	++YYCURSOR;
yyFillLabel8:
	yych = *YYCURSOR;
	switch (yych) {
		case '\n':
			in->yyt1 = NULL;
			in->yyt2 = NULL;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = YYCURSOR;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			goto yy17;
		case 'd': goto yy26;
		default:
			if (YYLIMIT <= YYCURSOR) {
				if (fill_buffered_eof(in) == 0) goto yyFillLabel8;
			}
			goto yy23;
	}
yy27:
	{ return count; }
}

}

int lex_buffered_scc(input_t *in) {
    const char* a1;const char* a2;const char* b1;const char* b2;const char* c1;const char* c2;const char* d1;const char* d2;
    
    long count = 0;
loop:
    in->tok = in->cur;
    
{
	char yych;
	static const unsigned char yybm[256] = {
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,  16,  32,  64, 128,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0,
		  0,   0,   0,   0,   0,   0,   0,   0
	};
	if ((YYLIMIT - YYCURSOR) < 2) if (fill_buffered_scc(in, 2) != 0) return -2;
	yych = *YYCURSOR;
	if (yych <= '`') {
		if (yych <= 0x00) goto yy29;
		if (yych == '\n') {
			in->yyt1 = YYCURSOR;
			in->yyt2 = YYCURSOR;
			in->yyt3 = NULL;
			in->yyt4 = NULL;
			in->yyt5 = NULL;
			in->yyt6 = NULL;
			in->yyt7 = NULL;
			in->yyt8 = NULL;
			goto yy32;
		}
		goto yy30;
	} else {
		if (yych <= 'b') {
			if (yych <= 'a') {
				in->yyt1 = YYCURSOR;
				goto yy33;
			}
			in->yyt6 = YYCURSOR;
			goto yy34;
		} else {
			if (yych <= 'c') {
				in->yyt7 = YYCURSOR;
				goto yy35;
			}
			if (yych <= 'd') {
				in->yyt8 = YYCURSOR;
				goto yy36;
			}
			goto yy30;
		}
	}
yy29:
	++YYCURSOR;
	{ return count; }
yy30:
	++YYCURSOR;
yy31:
	{ return -1; }
yy32:
	++YYCURSOR;
	a1 = in->yyt1;
	a2 = in->yyt2;
	b1 = in->yyt6;
	b2 = in->yyt3;
	c1 = in->yyt7;
	c2 = in->yyt4;
	d1 = in->yyt8;
	d2 = in->yyt5;
	{
        if (a1)      { OUTC('A'); OUTS(a1, a2); }
        else if (b1) { OUTC('B'); OUTS(b1, b2); }
        else if (c1) { OUTC('C'); OUTS(c1, c2); }
        else if (d1) { OUTC('D'); OUTS(d1, d2); }
        OUTC('\n');
        goto loop;
    }
yy33:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 16) goto yy37;
	if (yych == '\n') {
		in->yyt2 = YYCURSOR;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		in->yyt5 = NULL;
		in->yyt6 = NULL;
		in->yyt7 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
	goto yy31;
yy34:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 32) goto yy39;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = YYCURSOR;
		in->yyt4 = NULL;
		in->yyt5 = NULL;
		in->yyt7 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
	goto yy31;
yy35:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 64) goto yy40;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = NULL;
		in->yyt4 = YYCURSOR;
		in->yyt5 = NULL;
		in->yyt6 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
	goto yy31;
yy36:
	yych = *(YYMARKER = ++YYCURSOR);
	if (yybm[0+yych] & 128) goto yy41;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		in->yyt5 = YYCURSOR;
		in->yyt6 = NULL;
		in->yyt7 = NULL;
		goto yy32;
	}
	goto yy31;
yy37:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if (fill_buffered_scc(in, 1) != 0) return -2;
	yych = *YYCURSOR;
	if (yybm[0+yych] & 16) goto yy37;
	if (yych == '\n') {
		in->yyt2 = YYCURSOR;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		in->yyt5 = NULL;
		in->yyt6 = NULL;
		in->yyt7 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
yy38:
	YYCURSOR = YYMARKER;
	goto yy31;
yy39:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if (fill_buffered_scc(in, 1) != 0) return -2;
	yych = *YYCURSOR;
	if (yybm[0+yych] & 32) goto yy39;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = YYCURSOR;
		in->yyt4 = NULL;
		in->yyt5 = NULL;
		in->yyt7 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
	goto yy38;
yy40:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if (fill_buffered_scc(in, 1) != 0) return -2;
	yych = *YYCURSOR;
	if (yybm[0+yych] & 64) goto yy40;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = NULL;
		in->yyt4 = YYCURSOR;
		in->yyt5 = NULL;
		in->yyt6 = NULL;
		in->yyt8 = NULL;
		goto yy32;
	}
	goto yy38;
yy41:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if (fill_buffered_scc(in, 1) != 0) return -2;
	yych = *YYCURSOR;
	if (yybm[0+yych] & 128) goto yy41;
	if (yych == '\n') {
		in->yyt1 = NULL;
		in->yyt2 = NULL;
		in->yyt3 = NULL;
		in->yyt4 = NULL;
		in->yyt5 = YYCURSOR;
		in->yyt6 = NULL;
		in->yyt7 = NULL;
		goto yy32;
	}
	goto yy38;
}

}

#undef YYCURSOR
#undef YYMARKER
#undef YYLIMIT
#undef YYTOKEN
#undef TLP_CLEAR

#define FN_BENCH(suffix) \
void bench_##suffix::operator()( \
        benchmark::State &state, const char* input, long expected) const { \
    long count = 0; \
    for (auto _ : state) { \
        input_t in; \
        init_input_##suffix(&in, input); \
        count = lex_##suffix(&in); \
        free_input(&in); \
    } \
    if (count != expected) state.SkipWithError("error"); \
}
FN_BENCH(simple)
FN_BENCH(buffered_eof)
FN_BENCH(buffered_scc)
#undef FN_BENCH

#define FN_TEST(suffix) \
bool test_##suffix(const char* input, long expected) { \
    input_t in; \
    init_input_##suffix(&in, input); \
    long count = lex_##suffix(&in); \
    switch (count) { \
    default: \
        if (count != expected) { \
            fprintf(stderr, "wrong count, expected %ld, got %ld\n", expected, count); \
        } \
        break; \
    case -1: \
        fprintf(stderr, "syntax error\n"); \
        break; \
    case -2: \
        fprintf(stderr, "yyfill error\n"); \
        break; \
    } \
    free_input(&in); \
    return count == expected; \
}
FN_TEST(simple)
FN_TEST(buffered_eof)
FN_TEST(buffered_scc)
#undef FN_TEST


} // namespace re2c_submatch_11__alt1_4
